destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-mesh-demo-destination-rule
  namespace: service-mesh-demo
spec:
  host: orders
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: recommendation
    labels:
      category: general
  - name: recommendation-food
    labels:
      category: food
